--- a/RecipeTop/main/templates/main/index.html
+++ b/RecipeTop/main/templates/main/index.html
@@ -1,5 +1,19 @@
-{% extends 'main/layout.html' %}
-
-{% block content %}
-<h3>Index hello</h3>
-{% endblock %}
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="static/main/css/loading.css">
+    
+    <title>loading screen</title>
+</head>
+<body>
+    
+<div class="loading_container">
+    <h1>Our logo here</h1>
+</div>
+<script src="static/main/js/loading.js"></script>
+</body>
+</html>
