--- a/RecipeTop/main/templates/main/layout.html
+++ b/RecipeTop/main/templates/main/layout.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}Default Title{% endblock %}</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="static/main/css/search.css">
+
     {% block stylesheet %}{% endblock %}
 </head>
 <body>
