Added data.json and made the search page work from the database

--- a/RecipeTop/main/templates/main/search.html
+++ b/RecipeTop/main/templates/main/search.html
@@ -3,61 +3,28 @@
 {% block content %}
 <div class="container">
     <div class="grid">
-            <div class="card">
-                <div class="card-image">
-                      <img src="https://www.thechunkychef.com/wp-content/uploads/2017/08/One-Pot-Chicken-Parmesan-Pasta-feat.jpg">
-                      <span class="card-title">Card Title</span>
-                </div>
-                <div class="card-content">
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio commodi illum quam est sint quibusdam praesentium earum. Possimus odit natus quod sapiente laudantium, cum, ea tempora, rerum explicabo unde deserunt.</p>
-                </div>
-                    <div class="card-action">
-                      <h3>card action section</h3>
-                    </div>
+        {% for recipe in recipes %}
+        <div class="card">
+            <div class="card-image">
+                <img src="https://www.thechunkychef.com/wp-content/uploads/2017/08/One-Pot-Chicken-Parmesan-Pasta-feat.jpg">
+                <span class="card-title">{{recipe.title}}</span>
             </div>
-
-            <div class="card">
-                    <div class="card-image">
-                          <img src="https://www.thechunkychef.com/wp-content/uploads/2017/08/One-Pot-Chicken-Parmesan-Pasta-feat.jpg">
-                          <span class="card-title">Card Title</span>
-                    </div>
-                    <div class="card-content">
-                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere qui quas, non harum cupiditate porro ipsa recusandae aspernatur velit neque explicabo asperiores veniam nobis nihil molestiae rerum aut corporis distinctio.</p>
-                    </div>
-                        <div class="card-action">
-                                <h3>card action section</h3>
-                        </div>
-                </div>
-
-             <div class="card">
-                        <div class="card-image">
-                              <img src="https://www.thechunkychef.com/wp-content/uploads/2017/08/One-Pot-Chicken-Parmesan-Pasta-feat.jpg">
-                              <span class="card-title">Card Title</span>
-                        </div>
-                        <div class="card-content">
-                              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit sint est ab veniam officiis cum excepturi nihil itaque, soluta beatae alias sed commodi quam consequatur nam debitis? Voluptatem, unde sunt.</p>
-                        </div>
-                            <div class="card-action">
-                                    <h3>card action section</h3>
-                            </div>
-                </div>
-
-                <div class="card">
-                        <div class="card-image">
-                              <img src="https://www.thechunkychef.com/wp-content/uploads/2017/08/One-Pot-Chicken-Parmesan-Pasta-feat.jpg">
-                              <span class="card-title">Card Title</span>
-                        </div>
-                        <div class="card-content">
-                              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit sint est ab veniam officiis cum excepturi nihil itaque, soluta beatae alias sed commodi quam consequatur nam debitis? Voluptatem, unde sunt.</p>
-                        </div>
-                            <div class="card-action">
-                                    <h3>card action section</h3>
-                            </div>
-                </div>
-
-
+            <div class="card-content">
+                <p>{{recipe.description}}</p>
+                <p>Number of steps: {{recipe.steps.all.count}}</p>
+                <p>Ingredients:</p>
+                {% for ing in recipe.recipetoingredient_set.all %}
+                    <p>name: {{ing.ingredient.name}}</p>
+                    <p>unit: {{ing.unit}}</p>
+                    <p>quantity: {{ing.quantity}}</p>
+                {% endfor %}
+            </div>
+            <div class="card-action">
+                <h3>card action section</h3>
+            </div>
+        </div>
+        {% endfor %}
     </div>
-
 </div>
 
 {% endblock %}
