--- a/RecipeTop/main/static/main/css/search.css
+++ b/RecipeTop/main/static/main/css/search.css
@@ -17,6 +17,12 @@
     grid-template-columns: 1fr 1fr 1fr;
     grid-column-gap: 5px;
   }
+
+  .container .grid .card .card-image .card-title {
+    font-size: 30px;
+    font-weight: 400;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  }
   
   /*# sourceMappingURL=search.css.map */
   
