added pic to loading screen
-changed css for loading screen
-added scss for search

--- a/RecipeTop/main/templates/main/index.html
+++ b/RecipeTop/main/templates/main/index.html
@@ -12,7 +12,9 @@
 <body>
     
 <div class="loading_container">
-    <h1>Our logo here</h1>
+    <div class="img_container">
+
+    </div>
 </div>
 <script src="static/main/js/loading.js"></script>
 </body>
