--- a/RecipeTop/main/static/main/css/loading.css
+++ b/RecipeTop/main/static/main/css/loading.css
@@ -1,48 +1,47 @@
 body {
-    margin: 0;
-    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#00b7ea+0,009ec3+100;Blue+3D+%2315 */
-    background: #00b7ea;
-    /* Old browsers */
-    background: -moz-linear-gradient(left, #00b7ea 0%, #009ec3 100%);
-    /* FF3.6-15 */
-    background: -webkit-linear-gradient(left, #00b7ea 0%, #009ec3 100%);
-    /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to right, #00b7ea 0%, #009ec3 100%);
-    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#00b7ea", endColorstr="#009ec3",GradientType=1 );
-    /* IE6-9 */
+  margin: 0;
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#00b7ea+0,009ec3+100;Blue+3D+%2315 */
+  background: #00b7ea;
+  /* Old browsers */
+  background: -moz-linear-gradient(left, #00b7ea 0%, #009ec3 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(left, #00b7ea 0%, #009ec3 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to right, #00b7ea 0%, #009ec3 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#00b7ea", endColorstr="#009ec3",GradientType=1 );
+  /* IE6-9 */
+}
+
+.loading_container {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+}
+.loading_container .img_container {
+  background-image: url("../img/loading_logo.png");
+  background-size: cover;
+  background-origin: center;
+  background-repeat: no-repeat;
+  height: 400px;
+  width: 600px;
+  filter: drop-shadow(25px 30px 9px rgba(0, 0, 0, 0.3));
+  transition: all 0.5s ease;
+  animation: move 4s alternate infinite;
+}
+@keyframes move {
+  25% {
+    transform: scale(1.05);
   }
-  
-  .loading_container {
-    display: flex;
-    align-items: center;
-    align-content: center;
-    justify-content: center;
-    width: 100%;
-    height: 100vh;
+  50% {
+    transform: scale(1.1);
   }
-  .loading_container h1 {
-    color: white;
-    font-size: 40px;
-    -webkit-clip-path: polygon(20% 0%, 0% 20%, 0 52%, 0% 80%, 20% 100%, 50% 70%, 80% 100%, 100% 80%, 100% 52%, 100% 20%, 80% 0%, 50% 30%);
-    clip-path: polygon(20% 0%, 0% 20%, 0 52%, 0% 80%, 20% 100%, 50% 70%, 80% 100%, 100% 80%, 100% 52%, 100% 20%, 80% 0%, 50% 30%);
-    transition: all 0.5s ease;
-    animation: move 4s alternate infinite;
+  75% {
+    transform: scale(1.15);
   }
-  @keyframes move {
-    25% {
-      clip-path: polygon(20% 0%, 100% 38%, 70% 90%, 0% 100%);
-      background: pink;
-    }
-    50% {
-      clip-path: polygon(0 46%, 100% 15%, 55% 74%, 0 100%);
-      background: orange;
-    }
-    75% {
-      clip-path: polygon(100% 38%, 100% 38%, 66% 100%, 0 53%);
-      background: cornflowerblue;
-    }
-  }
-  
-  /*# sourceMappingURL=loading.css.map */
-  
+}
+
+/*# sourceMappingURL=loading.css.map */
