--- a/RecipeTop/main/static/main/scss/search.scss
+++ b/RecipeTop/main/static/main/scss/search.scss
@@ -6,9 +6,9 @@
 }
 /*# sourceMappingURL=search.css.map */
 
-body{
-    background-color: bisque;
-}
+// body{
+//     // background-color: bisque;
+// }
 .container{
     width:80%;
     height:100;
