--- a/RecipeTop/main/templates/main/users.html
+++ b/RecipeTop/main/templates/main/users.html
@@ -1,6 +1,16 @@
-{% extends 'main/layout.html' %}
 
-{% block content %}
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="static/main/css/users.css">
+    
+    <title>loading screen</title>
+</head>
+<body>
 <div class="body">
     <div class="Micontainer">
         <div class="message">
@@ -13,7 +23,7 @@
             </div>
             <div class="person2 person">
                 <div class="picture boy"></div>
-               <h1>Jason</h1>
+                <h1>Jason</h1>
             </div>
             <div class="person3 person">
                 <div class="picture boy"></div>
@@ -26,5 +36,6 @@
         </div>
     </div>
 </div>
-
-{% endblock %}
+<script src="static/main/js/users.js"></script>
+</body>
+</html>
