--- a/RecipeTop/main/templates/main/layout.html
+++ b/RecipeTop/main/templates/main/layout.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="static/main/css/search.css">
     <link rel="stylesheet" href="static/main/css/menu.css">
+    <link rel="stylesheet" href="static/main/css/create.css">
+    <link rel="stylesheet" href="static/main/css/home.css">
     
 
 
@@ -41,7 +43,7 @@
                     <i class="material-icons">assignment</i>Recipes
                 </div>
                 <div class="collapsible-body blue">
-                        <a href="" class="waves-effect active red">create<i class="material-icons red">create</i></a>
+                        <a href="create" class="waves-effect active red">create<i class="material-icons red">create</i></a>
                         <a href="search" class="waves-effect active red">search<i class="material-icons red">search</i></a>
                 </div>
             </li>
