--- a/RecipeTop/main/templates/main/create.html
+++ b/RecipeTop/main/templates/main/create.html
@@ -6,5 +6,11 @@
 <br>
 <br>
 <br>
-<h1>Home</h1>
+
+        <div class="create_container blue">
+                form
+                </div>
+
+
+
 {% endblock %}
