--- a/RecipeTop/main/templates/main/create.html
+++ b/RecipeTop/main/templates/main/create.html
@@ -7,9 +7,29 @@
 <br>
 <br>
 
-        <div class="create_container blue">
-                form
-                </div>
+<div class="create_container blue">
+        <label for="title">you</label>
+        <input type="text" name="title" placeholder="Enter your title">
+
+        <!-- ingredients -->
+        {% for recipe in ingredients%}
+        <label>
+                <input type="checkbox" checked="checked" />
+                <span>This is :{{recipe.utensils}}</span>
+        </label>
+        {% endfor %}
+
+        <!-- utensils -->
+        <label>
+                <input type="checkbox" checked="checked" />
+                <span>Yellow</span>
+        </label>
+
+        <!-- steps -->
+
+
+
+</div>
 
 
 
