--- a/RecipeTop/main/templates/main/create.html
+++ b/RecipeTop/main/templates/main/create.html
@@ -1,4 +1,9 @@
 {% extends 'main/layout.html' %}
+{% block stylesheet %}
+
+
+<link rel="stylesheet" href="static/main/css/create.css">
+{% endblock %}
 
 {% block content %}
 <br>
@@ -11,11 +16,18 @@
         <label for="title">you</label>
         <input type="text" name="title" placeholder="Enter your title">
 
+        
+
         <!-- ingredients -->
+        <h1>Ingredients</h1>
+
+        
+        <input type="text" placeholder="enter ingredients">
+
         {% for recipe in ingredients%}
         <label>
-                <input type="checkbox" checked="checked" />
-                <span>This is :{{recipe.utensils}}</span>
+                <input type="checkbox" checked="checked" value="{{recipe.name}}" />
+                <span>This is :{{recipe.name}}</span>
         </label>
         {% endfor %}
 
