--- a/RecipeTop/main/templates/main/home.html
+++ b/RecipeTop/main/templates/main/home.html
@@ -1,5 +1,9 @@
 {% extends 'main/layout.html' %}
 
+{% block stylesheet %}
+<link rel="stylesheet" href="static/main/css/home.css">
+{% endblock %}
+
 {% block content %}
 <br>
 <br>
