--- a/RecipeTop/main/templates/main/create.html
+++ b/RecipeTop/main/templates/main/create.html
@@ -16,26 +16,34 @@
         <label for="title">you</label>
         <input type="text" name="title" placeholder="Enter your title">
 
-        
-
         <!-- ingredients -->
         <h1>Ingredients</h1>
-
-        
         <input type="text" placeholder="enter ingredients">
 
         {% for recipe in ingredients%}
         <label>
-                <input type="checkbox" checked="checked" value="{{recipe.name}}" />
-                <span>This is :{{recipe.name}}</span>
+                <input type="checkbox"  value="{{recipe.name}}" />
+                <span>{{recipe.name}}</span>
         </label>
         {% endfor %}
 
         <!-- utensils -->
+
+        <h3>utensils</h3>
+
+        {% for utensil in utensils%}
         <label>
-                <input type="checkbox" checked="checked" />
-                <span>Yellow</span>
+                <input type="checkbox" value="{{utensil}}"/>
+                <span>{{utensil}}</span>
         </label>
+        {% endfor %}
+
+        <h3>key words</h3>
+
+        <div class="chips chips-autocomplete" id="chip"></div>
+
+
+
 
         <!-- steps -->
 
@@ -46,3 +54,7 @@
 
 
 {% endblock %}
+
+{%block javascript %}
+<script src="static/main/js/create.js"></script>
+{% endblock%}
