--- a/RecipeTop/main/static/main/scss/users.scss
+++ b/RecipeTop/main/static/main/scss/users.scss
@@ -99,5 +99,15 @@ $welcome_font:'Coiny', cursive;
 
     }
 
+    .create{
+        margin: 0 auto;
+        display:flex;
+        align-items: center;
+        align-content: center;
+        background-color:rosybrown;
+        height:20vh;
+        width:100vh;
+    }
+
 
 }
