--- a/RecipeTop/main/templates/main/users.html
+++ b/RecipeTop/main/templates/main/users.html
@@ -29,9 +29,15 @@
             <form action="{% url 'users' %}" method="POST">
                 {% csrf_token %}
                 <input type="text" placeholder="name" name="name" required>
+                <input type="text" placeholder="age" name="age" required>
                 <input type="submit" value="Register" class="btn btn-secondary btn-block">
             </form>
-        </div>
+    </div>
+ {% if error %}
+ <h1 id="error">{{error}}</h1>
+{% endif %}
+
+<h4>{{example}}</h4>
 
     
  </div>
