Added hearted, finished create1.0

--- a/RecipeTop/main/templates/main/layout.html
+++ b/RecipeTop/main/templates/main/layout.html
@@ -45,6 +45,9 @@
                 <div class="collapsible-body blue">
                         <a href="create" class="waves-effect active red">create<i class="material-icons red">create</i></a>
                         <a href="search" class="waves-effect active red">search<i class="material-icons red">search</i></a>
+                        <br>
+                        <br>
+                        <a href="hearted" class="waves-effect active pink">favorite<i class="material-icons red">favorite</i></a>
                 </div>
             </li>
             <li>
@@ -75,6 +78,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="static/main/js/menu.js"></script>
     
-    {% block javascript %}{% endblock %}
+    {% block javascript %}
+    {% endblock %}
 </body>
 </html>
