--- a/RecipeTop/main/templates/main/create.html
+++ b/RecipeTop/main/templates/main/create.html
@@ -13,6 +13,7 @@
 <br>
 
 <div class="create_container blue">
+	<form action="{% url 'Home' %}" method="POST">
         <label for="title"></label>
         <input type="text" name="title" placeholder="Enter your title">
 
@@ -25,10 +26,20 @@
 		<tr id="example">
 			<td><input type="text" name="ingredient" placeholder="Enter your ingredient"></td>   
 			<td><input type="text" name="quantity" placeholder="Enter your quantity"></td>
-			<td><input type="text" name="unit" placeholder="Enter the unit"></td>	 
+			<td class="input-field col s10">
+				<!-- <div class="input-field col s4"> -->
+					<select>
+					  <option value="" disabled selected>Choose the unit</option>
+					  <option value="1" name="">Unit 1</option>
+					  <option value="2" name="">Unit 2</option>
+					  <option value="3" name="">Unit 3</option>
+					</select>
+				  <!-- </div> -->
+			</td>	 
 		</tr>
 		</table>
-		<button onclick="table()" class='waves-effect waves-light btn'>Add another Ingredient</button>
+		<button onclick="table()" class='waves-effect waves-light btn' type="button">Add another Ingredient</button>
+	
        
 
         <!-- utensils -->
@@ -36,16 +47,24 @@
 
         {% for utensil in utensils%}
         <label>
-                <input type="checkbox" value="{{utensil}}"/>
+                <input type="checkbox" value="{{utensil}}" name="utensil"/>
                 <span>{{utensil}}</span>
         </label>
         {% endfor %}
 
-        <h3>key words</h3>
-
+		<!-- Tags -->
+        <h3>Tags</h3>
         <div class="chips chips-autocomplete" id="chip"></div>
 
-        <!-- steps -->
+		<!-- steps -->
+		<div id="steps">
+			<h3> steps</h3>
+			<!-- <input type="text"  name=step id="in"> -->
+		</div>
+		<button onclick="addSteps()" class='waves-effect waves-light btn' type="button">Add a step</button>
+		<button type="submit">Submit Changes</button>
+	</form>
+		
 </div>
 
 
