--- a/RecipeTop/main/templates/main/create.html
+++ b/RecipeTop/main/templates/main/create.html
@@ -54,7 +54,11 @@
 
 		<!-- Tags -->
         <h3>Tags</h3>
-        <div class="chips chips-autocomplete" id="chip"></div>
+		<div class="chips chips-autocomplete" id="chip"></div>
+		<div class="time">
+			<h3>Time</h3>
+			<input type="text" name="time">
+		</div>
 
 		<!-- steps -->
 		<div id="steps">
