--- a/RecipeTop/main/templates/main/search.html
+++ b/RecipeTop/main/templates/main/search.html
@@ -39,6 +39,27 @@
 
 
 
+<div class="container">
+    <div class="search">
+        <form action="{% url 'search' %}" method="GET">
+            <h3>search</h3>
+            <label for="difficulty">difficulty</label>
+            <input type="text" name='difficulty'>
+            <hr>
+            <label for="rating">rating</label>
+            <input type="text" name='rating'>
+            <hr>
+            <button type="submit">Submit</button>
+        </form>
+    </div>
+</div>
+
+
+{% for i in filter%}
+<h1> {{i.title}}={{i.difficulty}} : {{i.rating}}</h1>
+
+{% endfor %}
+
 {% endblock %}
 
 {% block javascript %}
