--- a/RecipeTop/main/templates/main/index.html
+++ b/RecipeTop/main/templates/main/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="static/main/css/loading.css">
+    <link rel="stylesheet" href={% static "main/css/loading.css" %}>
     
     <title>loading screen</title>
 </head>
@@ -16,6 +16,6 @@
 
     </div>
 </div>
-<script src="static/main/js/loading.js"></script>
+<script src={% static "main/js/loading.js" %}></script>
 </body>
 </html>
