--- a/RecipeTop/main/templates/main/layout.html
+++ b/RecipeTop/main/templates/main/layout.html
@@ -9,14 +9,8 @@
     <!-- import icons -->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- matereliaze css -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    
-    <link rel="stylesheet" href="static/main/css/menu.css">
-    
-    
-    
-
-
+    <link rel="stylesheet" href={% static "main/css/materialize.css" %}>
+    <link rel="stylesheet" href={% static "main/css/menu.css" %}>
     {% block stylesheet %}{% endblock %}
 </head>
 <body>
@@ -75,8 +69,8 @@
     
 
     <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="static/main/js/menu.js"></script>
+    <script src={% static "main/js/materialize.min.js" %}></script>
+    <script src={% static "main/js/menu.js" %}></script>
     
     {% block javascript %}
     {% endblock %}
