--- a/RecipeTop/main/templates/main/search.html
+++ b/RecipeTop/main/templates/main/search.html
@@ -1,8 +1,8 @@
 {% extends 'main/layout.html' %}
-
+{% load static %}
 
 {% block stylesheet %}
-<link rel="stylesheet" href="static/main/css/search.css">
+<link rel="stylesheet" href={% static "main/css/search.css" %}>
 
 {% endblock %}
 {% block content %}
