--- a/RecipeTop/main/templates/main/create.html
+++ b/RecipeTop/main/templates/main/create.html
@@ -29,9 +29,17 @@
 				<!-- <div class="input-field col s4"> -->
 					<select>
 					  <option value="" disabled selected>Choose the unit</option>
-					  <option value="1" name="">Unit 1</option>
-					  <option value="2" name="">Unit 2</option>
-					  <option value="3" name="">Unit 3</option>
+					  <option value="1" name="">cup(s)</option>
+					  <option value="2" name="">kg</option>
+					  <option value="3" name="">grams</option>
+					  <option value="4" name="">lbs</option>
+					  <option value="5" name="">ounces</option>
+					  <option value="6" name="">ml</option>
+					  <option value="7" name="">units</option>
+					  <option value="8" name="">tbsp</option>
+					  <option value="9" name="">tsp</option>
+					  <option value="10" name="">handfuls</option>
+
 					</select>
 				  <!-- </div> -->
 			</td>	 
