--- a/RecipeTop/main/templates/main/create.html
+++ b/RecipeTop/main/templates/main/create.html
@@ -13,8 +13,10 @@
 
 <div class="create_container blue">
 	<form action="{% url 'Home' %}" method="POST">
-        <label for="title"></label>
+        <label for="title">Title</label>
         <input type="text" name="title" placeholder="Enter your title">
+        <label for="description">Description</label>
+        <input type="text" name="description" placeholder="Enter a description...">
 
         <table id="table">
         <tr>
@@ -50,7 +52,7 @@
        
 
         <!-- utensils -->
-        <h3>utensils</h3>
+        <h3>Utensils</h3>
 
         {% for utensil in utensils%}
         <label>
@@ -69,7 +71,7 @@
 
 		<!-- steps -->
 		<div id="steps">
-			<h3> steps</h3>
+			<h3> Steps</h3>
 			<!-- <input type="text"  name=step id="in"> -->
 		</div>
 		<button onclick="addSteps()" class='waves-effect waves-light btn' type="button">Add a step</button>
