--- a/RecipeTop/main/static/main/css/menu.css
+++ b/RecipeTop/main/static/main/css/menu.css
@@ -1,7 +1,7 @@
 body {
   margin: 0px;
   padding: 0px;
-  background-color: royalblue;
+  background-color: white;
   height: 1000px;
 }
 
@@ -16,11 +16,11 @@ body {
   display: grid;
   align-content: center;
   grid-template-columns: 4fr 1fr;
-  background: #0074D9;
+  background: white;
   width: 100%;
   height: 100%;
   grid-column-gap: 5px;
-  box-shadow: 0 2px #005fb3;
+  box-shadow: 0 2px black;
 }
 .Mnavbar .Mnav_container .logo {
   width: 100%;
