--- a/RecipeTop/main/templates/main/create.html
+++ b/RecipeTop/main/templates/main/create.html
@@ -10,8 +10,10 @@
 <br>
 <br>
 <br>
+<br>
+<br>
 
-<div class="create_container blue">
+<div class="create_container white">
 	<form action="{% url 'Home' %}" method="POST">
         <label for="title">Title</label>
         <input type="text" name="title" placeholder="Enter your title">
@@ -20,30 +22,27 @@
 
         <table id="table">
         <tr>
-				<td>Ingredient</td>
-				<td>Quantity</td>
-				<td>Unit</td>
+			<td>Ingredient</td>
+			<td>Quantity</td>
+			<td>Unit</td>
         </tr>       
 		<tr id="example">
 			<td><input type="text" name="ingredient" placeholder="Enter your ingredient"></td>   
 			<td><input type="text" name="quantity" placeholder="Enter your quantity"></td>
 			<td class="input-field col s10">
-				<!-- <div class="input-field col s4"> -->
-					<select>
-					  <option value="" disabled selected>Choose the unit</option>
-					  <option value="1" name="">cup(s)</option>
-					  <option value="2" name="">kg</option>
-					  <option value="3" name="">grams</option>
-					  <option value="4" name="">lbs</option>
-					  <option value="5" name="">ounces</option>
-					  <option value="6" name="">ml</option>
-					  <option value="7" name="">units</option>
-					  <option value="8" name="">tbsp</option>
-					  <option value="9" name="">tsp</option>
-					  <option value="10" name="">handfuls</option>
-
-					</select>
-				  <!-- </div> -->
+				<select>
+					<option value="" disabled selected>Choose the unit</option>
+					<option value="1" name="">cup(s)</option>
+					<option value="2" name="">kg</option>
+					<option value="3" name="">grams</option>
+					<option value="4" name="">lbs</option>
+					<option value="5" name="">ounces</option>
+					<option value="6" name="">ml</option>
+					<option value="7" name="">units</option>
+					<option value="8" name="">tbsp</option>
+					<option value="9" name="">tsp</option>
+					<option value="10" name="">handfuls</option>
+				</select>
 			</td>	 
 		</tr>
 		</table>
