Make Follow page

--- a/RecipeTop/main/templates/main/create.html
+++ b/RecipeTop/main/templates/main/create.html
@@ -25,7 +25,10 @@
 				<td>Unit</td>
         </tr>       
 		<tr id="example">
-			<td><input type="text" name="ingredient" placeholder="Enter your ingredient"></td>   
+			<td>
+				<!-- <input type="text" name="ingredient" placeholder="Enter your ingredient" id="autocomplete-input" class="autocomplete"> -->
+				<input type="text" name="ingredient" placeholder="Enter your ingredient" id="autocomplete-input" class="autocomplete">
+			</td>   
 			<td><input type="text" name="quantity" placeholder="Enter your quantity"></td>
 			<td class="input-field col s10">
 				<!-- <div class="input-field col s4"> -->
