Fixed gera miss pull

--- a/RecipeTop/main/templates/main/create.html
+++ b/RecipeTop/main/templates/main/create.html
@@ -29,7 +29,7 @@
 		<tr id="example">
 			<td>
 				<!-- <input type="text" name="ingredient" placeholder="Enter your ingredient" id="autocomplete-input" class="autocomplete"> -->
-				<input type="text" name="ingredient" placeholder="Enter your ingredient" id="autocomplete-input" class="autocomplete">
+				<input type="text" name="ingredient" placeholder="Enter your ingredient">
 			</td>   
 			<td><input type="text" name="quantity" placeholder="Enter your quantity"></td>
 			<td class="input-field col s10">
