--- a/RecipeTop/main/templates/main/create.html
+++ b/RecipeTop/main/templates/main/create.html
@@ -14,11 +14,16 @@
 <br>
 
 <div class="create_container white">
-	<form action="{% url 'Home' %}" method="POST">
-        <label for="title">Title</label>
-        <input type="text" name="title" placeholder="Enter your title">
-        <label for="description">Description</label>
-        <input type="text" name="description" placeholder="Enter a description...">
+	<form action="{% url 'create' %}" method="POST">
+		{% csrf_token %}
+		<div class="input-field">
+			<input type="text" name="title">
+			<label for="title">Title</label>
+		</div>
+		<div class="input-field">
+			<input type="text" name="description">
+			<label for="description">Description</label>
+		</div>
 
         <table id="table">
         <tr>
@@ -29,11 +34,13 @@
 		<tr id="example">
 			<td>
 				<!-- <input type="text" name="ingredient" placeholder="Enter your ingredient" id="autocomplete-input" class="autocomplete"> -->
-				<input type="text" name="ingredient" placeholder="Enter your ingredient">
+				<div class="input-field">
+					<input type="text" name="ingredient" placeholder="Enter your ingredient" id="autocomplete-input" class="autocomplete">
+				</div>
 			</td>   
 			<td><input type="text" name="quantity" placeholder="Enter your quantity"></td>
 			<td class="input-field col s10">
-				<select>
+				<select name="unit">
 					<option value="" disabled selected>Choose the unit</option>
 					<option value="1" name="">cup(s)</option>
 					<option value="2" name="">kg</option>
@@ -85,4 +92,16 @@
 
 {%block javascript %}
 <script src={% static "main/js/create.js" %}></script>
+
+<script>
+	$(document).ready(function(){
+		$('input.autocomplete').autocomplete({
+			data: {
+				{% for ing in ingredients%}
+					"{{ing.name}}": null,
+				{% endfor %}
+			},
+		});
+	});
+</script>
 {% endblock%}
